make geom_smooth methods explicit

--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -233,11 +233,11 @@ mcols(chrw$Bar) <- cbind(mcols(chrw$Bar), mcols(grWindows(genome=genomes$Bar, me
 ```{r chromosome_plots_operons_oki, dependson="chromosome_plots_operons", fig.height=6, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 plots$Oki$operons <- list()
 
-plots$Oki$operons$density_1 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.count) + geom_point() + facet_wrap(~seqnames) + geom_smooth() + ggtitle(paste("Okinawa: operons per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OKI2018.I69 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
+plots$Oki$operons$density_1 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.count) + geom_point() + facet_wrap(~seqnames) + geom_smooth(method='loess', formula=y~x) + ggtitle(paste("Okinawa: operons per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OKI2018.I69 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
 
 plots$Oki$operons$density_2 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.count, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric")) + ggtitle(paste("Okinawa: operons per window (size = ", windowSize/1000, " kbp)", sep=""))
 
-plots$Oki$operons$length_1 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth() + ggtitle(paste("Okinawa: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OKI2018.I69 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
+plots$Oki$operons$length_1 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth(method='loess', formula=y~x) + ggtitle(paste("Okinawa: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OKI2018.I69 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
 
 plots$Oki$operons$length_2 <- ggplot(chrw$Oki |> as.data.frame() |> plyranges::filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.mean, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric"), se=FALSE) + ggtitle(paste("Okinawa: mean operon size per window (size = ", windowSize/1000, " kbp)", sep=""))
 
@@ -252,7 +252,7 @@ plots$Osa$operons$density_1 <- ggplot(chrw$Osa |> as.data.frame() |> plyranges::
 
 plots$Osa$operons$density_2 <- ggplot(chrw$Osa |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.count, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric")) + ggtitle(paste("Osaka: operons per window (size = ", windowSize/1000, " kbp)", sep=""))
 
-plots$Osa$operons$length_1 <- ggplot(chrw$Osa |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth() + ggtitle(paste("Osaka: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OSKA2016v1.9 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
+plots$Osa$operons$length_1 <- ggplot(chrw$Osa |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth(method='loess', formula=y~x) + ggtitle(paste("Osaka: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$OSKA2016v1.9 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
 
 plots$Osa$operons$length_2 <- ggplot(chrw$Osa |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.mean, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric"), se=FALSE) + ggtitle(paste("Osaka: mean operon size per window (size = ", windowSize/1000, " kbp)", sep=""))
 
@@ -262,11 +262,11 @@ lapply(plots$Osa$operons, \(x) x)
 ```{r chromosome_plots_operons_bar, dependson="chromosome_plots_operons", fig.height=6, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 plots$Bar$operons <- list()
 
-plots$Bar$operons$density_1 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.count) + geom_point() + facet_wrap(~seqnames) + geom_smooth() + ggtitle(paste("Barcelona: operons per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$Bar2.p4 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
+plots$Bar$operons$density_1 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.count) + geom_point() + facet_wrap(~seqnames) + geom_smooth(method='loess', formula=y~x) + ggtitle(paste("Barcelona: operons per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$Bar2.p4 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
 
 plots$Bar$operons$density_2 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.count, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric")) + ggtitle(paste("Barcelona: operons per window (size = ", windowSize/1000, " kbp)", sep=""))
 
-plots$Bar$operons$length_1 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth() + ggtitle(paste("Barcelona: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$Bar2.p4 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
+plots$Bar$operons$length_1 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=operons.n.mean) + geom_point() + facet_wrap(~seqnames) + geom_smooth(method='loess', formula=y~x) + ggtitle(paste("Barcelona: mean operon size per window (size = ", windowSize/1000, " kbp)", sep="")) + geom_vline( data = (longShort$Bar2.p4 -1) |> GenomicBreaks::cleanGaps() |> as.data.frame(), aes(xintercept = start), col = "gray")
 
 plots$Bar$operons$length_2 <- ggplot(chrw$Bar |> as.data.frame() |> plyranges::filter(seqnames %in% c('Chr1', 'Chr2', 'PAR', 'XSR')) ) + aes(x=start, y=operons.n.mean, col = Arm) + geom_point() + facet_wrap(~seqnames, nrow = 1) + geom_smooth(method='loess', formula = y ~ x, method.args = list(family = "symmetric"), se=FALSE) + ggtitle(paste("Barcelona: mean operon size per window (size = ", windowSize/1000, " kbp)", sep=""))
 
