--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -49,22 +49,10 @@ centered on alignment stops.
 Lets look at `GC` content before and after coalescing: 
 
 ```{r echo=T, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
-#hm_GC1 <- sapply(gbs,  bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
-hm_GC2 <- sapply(coa[1:15],  bp_heatmap, win = 1000, pat = "GC", direction = "left") |> SimpleList()
-#hm_GC3 <- sapply(coa2, bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
-
 maxHeight <- 2000
-#sm_GC1 <- sapply(hm_GC1, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC2 <- sapply(hm_GC2, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-#sm_GC3 <- sapply(hm_GC3, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-
-#plotHeatmapList(sm_GC1[1:5])
-
+sm_GC2 <- sapply(coa[1:15],  bp_heatmap, win = 1000, pat = "GC", direction = "left") |>
+          sapply(smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 plotHeatmapList(sm_GC2[1:5])
-#plotHeatmapList(sm_GC2[6:10])
-#plotHeatmapList(sm_GC2[11:15])
-
-#plotHeatmapList(sm_GC3[1:5])
 ```
 
 The alignment stops are ordered in such a way that start (or left breaks) are
@@ -78,17 +66,10 @@ aligned region, except for the Oki – Kum pair.
 Now looking at TATA content:
 
 ```{r TATA, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
-#hm_GC1_TATA <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
-hm_GC2_TATA <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "TATA", direction = "left") |> SimpleList()
-
 maxHeight <- 2000
-#sm_GC1_TATA <- sapply(hm_GC1_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC2_TATA <- sapply(hm_GC2_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-#sm_GC3_TATA <- sapply(hm_GC3_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-
-#plotHeatmapList(sm_GC1_TATA)
+sm_GC2_TATA <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "TATA", direction = "left") |> 
+               sapply(smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 plotHeatmapList(sm_GC2_TATA[1:5])
-#plotHeatmapList(sm_GC3_TATA)
 ```
 
 The directionaility here is consistent with the `GC` content analysis.
@@ -103,22 +84,14 @@ directly after promoter regions.
 
 
 ```{r AAGCsGCwwmkCGrCTTyn, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
-#hm_GC1_mot <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
-hm_GC2_mot <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
-
 maxHeight <- 2000
-#sm_GC1_mot <- sapply(hm_GC1_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC2_mot <- sapply(hm_GC2_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-#sm_GC3_mot <- sapply(hm_GC3_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-
-#plotHeatmapList(sm_GC1_mot)
+sm_GC2_mot <- sapply(coa[1:15], bp_heatmap, window = 1000, pat = "AGCNGC", direction = "left") |> 
+              sapply(hm_GC2_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 plotHeatmapList(sm_GC2_mot[1:5])
-#plotHeatmapList(sm_GC3_mot)
 ```
 
 
 ## Cluster analysis
-
 
 ```{r cluster_analysis, fig.height=20, fig.width=20}
 # # Accessory functions
